# comp445

./: README.md  script.py
rw612/boards/frdmrw612/el2go_examples/el2go_mqtt_demo/el2go_mqtt_demo_ns/armgcc/: CMakeLists.txt  config.cmake
rw612/boards/frdmrw612/el2go_examples/el2go_mqtt_demo/el2go_mqtt_demo_s/armgcc/: CMakeLists.txt
rw612/boards/frdmrw612/ncp_examples/ncp_device/armgcc/: CMakeLists.txt  RW610_flash.ld
rw612/middleware/wireless/framework/boards/rdrw612bga/: CMakeLists.txt  board.h  board_comp.c  board_comp.h  board_lp.c  clock_config.c  hardware_init.c  pin_mux.h
rw612/middleware/wireless/zigbee/: CMakeLists.txt  middleware_wireless_zigbee.cmake  middleware_wireless_zigbee_cmake.cmake  middleware_wireless_zigbee_core_libs.cmake  middleware_wireless_zigbee_examples.cmake  middleware_wireless_zigbee_libs_rw612.cmake
rw612/middleware/wireless/zigbee/BDB/Source/TouchLink/: bdb_tl_router_initiator_target.c  bdb_tl_router_target.c
rw612/middleware/wireless/zigbee/ZCL/Clusters/ApplianceManagement/Source/: ApplianceControl.c  ApplianceControlServerCommands.c  ApplianceEventsAndAlertsClientCommands.c  ApplianceEventsAndAlertsServerCommands.c  ApplianceIdentification.c  ApplianceStatistics.c  ApplianceStatisticsClientCommands.c  ApplianceStatisticsCommandHandler.c  ApplianceStatistics_internal.h
rw612/middleware/wireless/zigbee/ZCL/Clusters/Closures/Source/: DoorLock.c  DoorLockCommandHandler.c  WindowCovering.c  WindowCoveringCommandHandler.c  WindowCoveringCommands.c  WindowCovering_internal.h
rw612/middleware/wireless/zigbee/ZCL/Clusters/GreenPower/Source/: GreenPower.c  GreenPowerDirectCommandHandler.c  GreenPowerPairingConfiguration.c  GreenPowerProxyGPDHandler.c  GreenPowerProxyTableRequest.c  GreenPowerTranslationTableRequest.c
rw612/middleware/wireless/zigbee/ZCL/Clusters/HVAC/Source/: Thermostat.c  ThermostatUIConfig.c  Thermostat_internal.h
rw612/middleware/wireless/zigbee/ZCL/Clusters/Lighting/Source/: ColourControlCommandHandler.c
rw612/middleware/wireless/zigbee/ZCL/Clusters/MeasurementAndSensing/Source/: OccupancySensing.c  RelativeHumidityMeasurement.c  TemperatureMeasurement.c
rw612/middleware/wireless/zigbee/ZCL/Clusters/OTA/Source/: OTA_ClientUpgradeManager.c
rw612/middleware/wireless/zigbee/ZCL/Clusters/SmartEnergy/Include/: Price.h  (+1 more)
rw612/middleware/wireless/zigbee/cmake/: all_devices.cmake  defaults.cmake  extensions.cmake
rw612/middleware/wireless/zigbee/cmake/presets/: CMakePresetsBase.json
rw612/middleware/wireless/zigbee/examples/zb_common/: app_freertos_hooks.c  app_uart.c  serial_link_cmds_ctrl.c
rw612/middleware/wireless/zigbee/examples/zigbee_coordinator/: README.md  app_config.cmake
rw612/middleware/wireless/zigbee/examples/zigbee_coordinator/build_linux/: CMakeLists.txt
rw612/middleware/wireless/zigbee/examples/zigbee_coordinator/presets/: CMakePresets_frdmrw612.json
rw612/middleware/wireless/zigbee/examples/zigbee_router/: CMakePresets.json  app_config.cmake
rw612/middleware/wireless/zigbee/examples/zigbee_router/presets/: CMakePresets_frdmrw612.json
rw612/middleware/wireless/zigbee/platform/: middleware_wireless_zigbee_platform_ncp_host.cmake
rw612/middleware/wireless/zigbee/platform/K32W1/platform/: buttons.c  console.c  crypto.c  timer.c  wdog.c
rw612/middleware/wireless/zigbee/platform/NCP_HOST/cmake/: mbedtls_git.cmake  mbedtls_sdk.cmake  utils.cmake
rw612/middleware/wireless/zigbee/platform/NCP_HOST/ieee-802.15.4/: AppApi.h  tsv_pub.h
rw612/middleware/wireless/zigbee/platform/RW612/platform/: glue.c  leds.c  wdog.c
rw612/middleware/wireless/zigbee/platform/common/: crypto.c  timer.c
rw612/sdk/boards/frdmrw612/wifi_examples/wifi_wpa_supplicant/armgcc/: CMakeLists.txt  flags.cmake
sdk/boards/frdmrw612/se_hostlib_examples/el2go_import_blob/el2go_import_blob_ns/armgcc/: CMakeLists.txt  config.cmake
sdk/boards/frdmrw612/se_hostlib_examples/el2go_mqtt_client/el2go_mqtt_client_ns/armgcc/: CMakeLists.txt  flags.cmake
sdk/middleware/wireless/coex/: CMakeLists.txt  SW-Content-Register.txt  middleware_wireless_coex.cmake
sdk/middleware/wireless/coex/boards/: CMakeLists.txt
sdk/middleware/wireless/coex/boards/rw612/: CMakeLists.txt  FreeRTOSConfig.h  app_config.h  app_services_init.c  board.c  hardware_init.c  peripherals.h
sdk/middleware/wireless/coex/cmake/platform/rw612/: flags.cmake
sdk/middleware/wireless/coex/cmake/toolchain/: armgcc.cmake  armgcc_force_cpp.cmake  mcux_config.cmake
sdk/middleware/wireless/coex/examples/: CMakeLists.txt
sdk/middleware/wireless/coex/examples/coex_app/: CMakeLists.txt  readme.md
sdk/middleware/wireless/coex/examples/linker/: RW61x_flash.ld
sdk/middleware/wireless/coex/src/: CMakeLists.txt
sdk/middleware/wireless/coex/src/common/: host_msd_fatfs.h  ringtone.h
sdk/middleware/wireless/coex/src/configs/ble/: app_bluetooth_config.h  edgefast_bluetooth_audio_config.h  edgefast_bluetooth_config.h  edgefast_bluetooth_debug_config.h
sdk/middleware/wireless/coex/src/configs/lwip/: lwiphooks.h
sdk/middleware/wireless/coex/src/configs/platform/: ffconf.h
sdk/middleware/wireless/coex/src/configs/wifi/: wifi_config.h
sdk/middleware/wireless/coex/src/edgefast/: coex_shell.c  coex_shell.h
sdk/middleware/wireless/framework/boards/frdmrw612/: CMakeLists.txt  board.c  board.h  board_comp.h  clock_config.h  hardware_init.c  pin_mux.c  pin_mux.h
sdk/middleware/wireless/zigbee/examples/zigbee_coordinator/: CMakeLists.txt
sdk/middleware/wireless/zigbee/examples/zigbee_coordinator/build_linux/: README.md
sdk/middleware/wireless/zigbee/examples/zigbee_coordinator/presets/: CMakePresets_common.json  CMakePresets_rdrw612bga.json
sdk/middleware/wireless/zigbee/examples/zigbee_router/: CMakeLists.txt  README.md
sdk/middleware/wireless/zigbee/examples/zigbee_router/presets/: CMakePresets_common.json  CMakePresets_rdrw612bga.json
sdk/middleware/wireless/zigbee/platform/RW612/: CMakeLists.txt
sdk/middleware/wireless/zigbee/platform/RW612/docs/: README.md
sdk/middleware/wireless/zigbee/platform/RW612/platform/: buttons.c  rw61x_cpu2.c  uart.c
(+4607 files in other folders)
